@@ -46,13 +46,20 @@ else
 	$n = $_GET['n'];
 $SESSION->save('nln', $n);
 
-$nodelist = $LMS->GetNodeList($o, NULL, NULL, $n, $s);
+if(!isset($_GET['g']))
+	$SESSION->restore('nlg', $g);
+else
+	$g = $_GET['g'];
+$SESSION->save('nlg', $g);
+
+$nodelist = $LMS->GetNodeList($o, NULL, NULL, $n, $s, $g);
 $listdata['total'] = $nodelist['total'];
 $listdata['order'] = $nodelist['order'];
 $listdata['direction'] = $nodelist['direction'];
 $listdata['totalon'] = $nodelist['totalon'];
 $listdata['totaloff'] = $nodelist['totaloff'];
 $listdata['network'] = $n;
+$listdata['customergroup'] = $g;
 $listdata['state'] = $s;
 
 unset($nodelist['total']);
@@ -76,6 +83,7 @@ $SMARTY->assign('start',$start);
 $SMARTY->assign('nodelist',$nodelist);
 $SMARTY->assign('listdata',$listdata);
 $SMARTY->assign('networks',$LMS->GetNetworks());
+$SMARTY->assign('customergroups', $LMS->CustomergroupGetAll());
 $SMARTY->display('nodelist.html');
 
 ?>
