@@ -20,7 +20,7 @@
 		<TD WIDTH="1%" ALIGN=CENTER CLASS=head>
 			{t}ID{/t}
 		</TD>
-		<TD WIDTH="1%" ALIGN=RIGHT CLASS=head>
+		<TD WIDTH="1%" ALIGN=CENTER CLASS=head>
 			{t}Node name{/t}
 		</TD>
 		<TD WIDTH="1%" ALIGN=CENTER CLASS=head>
@@ -29,10 +29,10 @@
 		<TD WIDTH="1%" ALIGN=CENTER CLASS=head>
 			{t}MAC address{/t}
 		</TD>
-		<TD WIDTH="1%" ALIGN=LEFT CLASS=head>
+		<TD WIDTH="1%" ALIGN=CENTER CLASS=head>
 			{t}Owner{/t}
 		</TD>
-		<TD WIDTH="94%" ALIGN=LEFT CLASS=head>
+		<TD WIDTH="94%" ALIGN=CENTER CLASS=head>
 			{t}Description{/t}
 		</TD>
 	</TR>
